ebaird/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  font-size: calc(30px + 2vmin);
}

.Header-flex-item {
  width: fit-content;
}

.solid-hr {
  border-top: solid #282c34;
  margin: 0;
  width: 100%;
}

.icon-flex-box {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-grow: 1;
  width: 100%;
}

.icon-flex-box-item {
  cursor: pointer;
  color: #282c34;
}

.icon-flex-box-item:hover {
  color: #474e5c;
}

.modal {
  background-color: inherit;
  position: fixed;
  top: 0;
  overflow: auto;
  width: 100%;
  height: 100%;
  text-align: center;
  padding: 10px;
}

.about-container {
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%)
}

.project-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
}

.project {
  display: flex;
  max-width: 40%;
  padding: 10px;
}
.project:hover {
  max-width: 45%;
}

.project img {
  opacity: 0.85;
}
.project:hover img {
  opacity: 0.1;
}

.project-image {
  object-fit: cover;
  z-index: 0;
  width: 100%;
  border-radius: 15px;
}
.project-image:hover {
  transition-duration: 75ms;
}

.project-details {
  display: flex;
  z-index: 1;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-left: -100%;
}

.project-description {
  padding: 20px;
}

.buffer-bottom {
  min-height: 15px;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  75% {
    opacity: 50;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  25% {
    opacity: 50;
  }
  100% {
    opacity: 0;
  }
}

@media (orientation: portrait) {
  .project {
    max-width: 65%;
  }
  .project:hover {
    max-width: 70%;
  }
}

